fixe stretched images

--- a/src/App.css
+++ b/src/App.css
@@ -130,7 +130,6 @@
 }
 .card img {
   width: 100%;
-  height: 250px;
 }
 .card .noImg{
   width: 100%;
@@ -184,7 +183,6 @@ margin-top: 20px;
   .grid-section {
     grid-template-columns: 1fr 1fr 1fr;
   }
-  .card img,
   .card .noImg{
     height: 200px; 
   }
@@ -193,7 +191,6 @@ margin-top: 20px;
   .grid-section {
     grid-template-columns: 1fr 1fr;
   }
-  .card img,
   .card .noImg{
     height: 220px; 
   }
@@ -233,7 +230,6 @@ margin-top: 20px;
   .grid-section {
     grid-gap: 15px;
   }
-  .card img,
   .card .noImg{
     height: auto;
     min-height: 150px; 
